--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 	<groupId>org.ops4j.pax</groupId>
 	<artifactId>web</artifactId>
-	<version>7.2.4-SNAPSHOT</version>
+	<version>7.2.4-CODICE</version>
 	<packaging>pom</packaging>
 
 	<name>OPS4J Pax Web</name>
@@ -46,7 +46,7 @@
 		<connection>scm:git:https://github.com/ops4j/org.ops4j.pax.web.git</connection>
 		<developerConnection>scm:git:https://github.com/ops4j/org.ops4j.pax.web.git</developerConnection>
 		<url>https://github.com/ops4j/org.ops4j.pax.web/tree/pax-web-7.2.x</url>
-		<tag>HEAD</tag>
+		<tag>web-7.2.4-CODICE</tag>
 	</scm>
 
 	<developers>
@@ -325,6 +325,7 @@
 							</goals>
 							<configuration>
 								<comparisonVersion>${baseline.version}</comparisonVersion>
+								<failOnError>false</failOnError>
 								<failOnWarning>false</failOnWarning>
 							</configuration>
 						</execution>
